tests/ui/imports/ambiguous-13.stderr
error: `Rect` is ambiguous
  --> $DIR/ambiguous-13.rs:18:9
   |
LL | fn a(_: Rect) {}
   |         ^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Rect` could refer to the struct imported here
  --> $DIR/ambiguous-13.rs:15:5
   |
LL | use crate::object::*;
   |     ^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Rect` to disambiguate
note: `Rect` could also refer to the struct imported here
  --> $DIR/ambiguous-13.rs:16:5
   |
LL | use crate::content::*;
   |     ^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Rect` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `Rect` is ambiguous
  --> $DIR/ambiguous-13.rs:18:9
   |
LL | fn a(_: Rect) {}
   |         ^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Rect` could refer to the struct imported here
  --> $DIR/ambiguous-13.rs:15:5
   |
LL | use crate::object::*;
   |     ^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Rect` to disambiguate
note: `Rect` could also refer to the struct imported here
  --> $DIR/ambiguous-13.rs:16:5
   |
LL | use crate::content::*;
   |     ^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Rect` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

